# ECG-TransferData

./: .gitignore  CMakeLists.txt  MedLink_SN_Injector.spec  MedLink_SN_Injector_v2.spec  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  server.py
.agent/: ecc-install-state.json
components/console_cmd/: CMakeLists.txt  console_cmd.c  console_cmd.h
components/device_info/: CMakeLists.txt  device_info.c  device_info.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c  mqtt_manager.h
components/ota_manager/: CMakeLists.txt  ota_manager.c  ota_manager.h
components/storage_manager/: CMakeLists.txt  storage_manager.c  storage_manager.h
components/uploader/: CMakeLists.txt  uploader.c  uploader.h
components/web_server/: CMakeLists.txt  dashboard.html  dns_server.c  dns_server.h  root.html  web_server.c  web_server.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
docs/: FTP_SETUP.md  OTA_UPDATE.md  PANDUAN_INJEKSI_SN.md  simulation_server.md  version.json
main/: CMakeLists.txt  app_main.c  idf_component.yml  tusb_msc_main.c
releases/: version.json
tools/sn_injector/: README.md  sn_injector.py
